--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-i18n": "^9.6.2",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-clipboard": "^1.0.0"
   },
   "devDependencies": {
     "@types/json-schema": "^7.0.14",
